# transformer-architectures

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  t.py
configs/: repro_hang.yaml  vanilla_large.yaml  vanilla_large_distributed.yaml  vision_large.yaml
debugging/: ddp_nccl_repro.py
docs/: distributed-training-conversion.md  nccl-timeout-investigation.md
transformer_architectures/: decoder.py  embedding.py  encoder.py  transformer_blocks.py
transformer_architectures/architectures/bert/: bert.py
transformer_architectures/architectures/og/: tokenizer.py  transformer.py
transformer_architectures/architectures/vanilla/: __init__.py  data.py  datamodule.py  distributed_training.py  ray_train.py  tokenization.py  training.py  training_ray.py  training_v2.py  transformer.py
transformer_architectures/architectures/vit/: __init__.py  data.py  training.py  transformer.py
transformer_architectures/attention/: attention_functions.py  multihead_attention.py
transformer_architectures/config/: __init__.py  yaml_parser.py
transformer_architectures/dataloading/: wmt_en_fr.py
transformer_architectures/datasets/: wmt_en_fr.py
transformer_architectures/feedforward/: feedforward.py
transformer_architectures/generation/: __init__.py  beam_search.py  generation.py  greedy.py
transformer_architectures/masking/: __init__.py  causal_masking.py
transformer_architectures/notebooks/: tensor_shape.ipynb
transformer_architectures/positional_encoding/: positional_encoding.py
transformer_architectures/preprocessing/: image_processing.py
transformer_architectures/samplers/: __init__.py  bucket_sampler.py
transformer_architectures/tokenization/: __init__.py  base.py
transformer_architectures/training/: base_train_config.py  checkpointing.py  data_utils.py  datamodule.py  distributed.py  grad_logging.py
transformer_architectures/training/distributed/: __init__.py  context.py  datamodule.py  trainable_architecture.py
transformer_architectures/util_layers/: layernorm.py  residual.py
transformers/: attention.py  decoder.py  encoder.py  transformer_blocks.py
transformers/architectures/og/: tokenizer.py  transformer.py
transformers/attention/: attention_functions.py  multihead_attention.py
transformers/feedforward/: feedforward.py
transformers/positional_encoding/: positional_encoding.py
transformers/util_layers/: residual.py
