[tool.poetry]
name = "transformer_architectures"
version = "0.1.0"
description = ""
authors = ["Fady Nakhla <fnakhla23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
numpy = "^1.24.2"
tiktoken = "^0.8.0"
pydantic = "^2.10.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.3.0"
pylint = "^3.0.0"
jupyter = "^1.0.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
known_typing = ["typing"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before=["STDLIB"]
